@startuml

title __MAIN's Class Diagram__\n

  namespace main {
    class main.Alerts {
        {static} + aboutUs()
        {static} + error()
        {static} + error()
        {static} + info()
        {static} + info()
        {static} + setIcon()
        {static} + warning()
    }
  }
  

  namespace main {
    class main.Application {
        {static} + logout()
        {static} + logout()
        {static} + stage()
        {static} - setStageLogout()
    }
  }
  

  namespace main {
    class main.GeneralController {
        - code : TableColumn<Client, String>
        - filteredData : FilteredList<Client>
        - full_name : TableColumn<Client, String>
        - menu : MenuBar
        - search : TextField
        - table : TableView<Client>
        + clickRow()
        + find()
        + initialize()
        - aboutUs()
        - logout()
        - toAdmin()
        - toClient()
        - toProfile()
    }
  }
  

  namespace main {
    class main.LoginController {
        - enter : Button
        - password : PasswordField
        - username : TextField
        - login()
        - saveUser()
    }
  }
  

  namespace main {
    class main.Main {
        {static} - log : Logger
        + loadUser()
        {static} + main()
        + start()
    }
  }
  

  namespace main {
    class main.PasswordDialog {
        - passwordField : PasswordField
        + PasswordDialog()
        + getPasswordField()
    }
  }
  

  namespace main {
    class main.ProfileController {
        - firstName : TextField
        - lastName : TextField
        - password : PasswordField
        - patronymic : TextField
        - position : TextField
        - username : TextField
        - value : String
        + initialize()
        + passwordValue()
        + usernameValue()
        - aboutUs()
        - change()
        - changeNotPassword()
        - changePassword()
        - logout()
        - save()
        - setFirstName()
        - setLastName()
        - setPassword()
        - setPatronymic()
        - setPosition()
        - setUsername()
        - toAdmin()
        - toHome()
    }
  }
  

  main.Main -up-|> javafx.application.Application
  main.PasswordDialog -up-|> javafx.scene.control.Dialog
  main.ProfileController o-- database.UserTable : table


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
